# nautobot-function-codes

./: .gitignore  CHANGELOG.md  LICENSE  README.md  invoke.example.yml  invoke.mysql.yml  mkdocs.yml  pyproject.toml  tasks.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  prepare_release.yml  release.yml  upstream_testing.yml
development/: Dockerfile  app_config_schema.py  docker-compose.base.yml  docker-compose.dev.yml  nautobot_config.py  towncrier_template.j2
docs/admin/: compatibility_matrix.md  install.md  uninstall.md  upgrade.md
docs/admin/release_notes/: version_0.1.md  version_0.2.md  version_1.0.md
docs/dev/: arch_decision.md  contributing.md  dev_environment.md  extending.md  publishing.md  release_checklist.md
docs/dev/code_reference/: api.md  package.md
docs/models/: functioncode.md
docs/user/: app_getting_started.md  app_overview.md  app_use_cases.md  external_interactions.md
nautobot_function_codes/: __init__.py  debug_utils.py  diagnostics.py  filter_extensions.py  filters.py  forms.py  navigation.py  table_extensions.py  tables.py  template_content.py  urls.py  utils.py  validators.py
nautobot_function_codes/api/: __init__.py  serializers.py  urls.py  views.py
nautobot_function_codes/forms/: __init__.py  assignment.py  device.py  import_assignments.py
nautobot_function_codes/jobs/: __init__.py  jobs.py
nautobot_function_codes/management/: __init__.py
nautobot_function_codes/management/commands/: diagnose_nautobot_function_codes.py  generate_nautobot_function_codes_test_data.py
nautobot_function_codes/migrations/: 0001_initial.py  0002_functioncode__custom_field_data.py  0002_remove_functioncode_color.py
nautobot_function_codes/models/: __init__.py  device_assignment.py  function_code.py
nautobot_function_codes/services/: __init__.py  coverage.py  import_assignments.py
nautobot_function_codes/templates/nautobot_function_codes/: assign_devices.html  clear_assignments.html  coverage_dashboard.html  functioncode_assign_devices.html  import_assignments.html
nautobot_function_codes/templates/nautobot_function_codes/dcim/: device_create.html
nautobot_function_codes/templates/nautobot_function_codes/inc/: coverage_group_table.html  function_code_panel.html
nautobot_function_codes/tests/: __init__.py  fixtures.py  test_api.py  test_assignment_views.py  test_coverage_views.py  test_device_integration.py  test_diagnostics.py  test_filters.py  test_forms.py  test_import_assignments.py  test_jobs.py  test_models.py  test_navigation.py  test_table_extensions.py  test_validators.py  test_views.py  utils.py
nautobot_function_codes/views/: __init__.py  assignment.py  coverage.py  device.py  device_overrides.py  function_code.py  import_assignments.py
